--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     >
 
   <androidx.recyclerview.widget.RecyclerView
@@ -12,7 +13,6 @@
       android:overScrollMode="never"
       android:paddingLeft="@dimen/timeLabelWidth"
       android:paddingTop="64dp"
-      tools:ignore="RtlHardcoded,RtlSymmetry"
       />
 
-</layout>
+</LinearLayout>
