--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
       android:id="@+id/recyclerView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:background="@color/black"
+      android:background="#FFFFFF"
       android:overScrollMode="never"
       android:paddingLeft="@dimen/timeLabelWidth"
       android:paddingTop="64dp"
