--- a/app/src/main/res/layout/item_program.xml
+++ b/app/src/main/res/layout/item_program.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/recycler_view_item"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,11 +9,12 @@
     android:background="@drawable/border">
 
   <TextView
+      android:id="@+id/text_view_event_name"
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:gravity="center"
       android:padding="4dp"
-      android:textColor="@android:color/white"
+      android:textColor="@android:color/black"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -22,9 +24,9 @@
 
   <View
       android:id="@+id/bar"
-      android:layout_width="2dp"
+      android:layout_width="1dp"
       android:layout_height="0dp"
-      android:background="@color/colorPrimary"
+      android:background="@color/black"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
